# NemesisBot

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  android.ps1  build.bat  build.ps1  build.sh  go.mod  go.sum
config/: config.cluster.default.json  config.default.json  config.security.default.json
default/: IDENTITY.md  SOUL.md  USER.md
docs/: ASYNC_EXEC_DEV_PLAN.md  ASYNC_EXEC_IMPLEMENTATION_REPORT.md  ASYNC_EXEC_USAGE.md  BOT_TO_BOT_RPC_LLM_DEVELOPMENT_REPORT.md  CHANGELOG.md  CLUSTER_ACTIONS_DISCOVERY.md  CLUSTER_ACTIONS_DISCOVERY_DEV_PLAN.md  CLUSTER_TEST_REPORT.md  CONCURRENCY_REVIEW_2026-03-05.md  CONNECTION_POOL_FIX.md  DEBUG_REPORT_2026-02-28_CHANNEL_CONSUMER_COMPETITION.md  EXTERNAL_CHANNEL_CLI_REFERENCE.md  EXTERNAL_CHANNEL_GUIDE.md  EXTERNAL_CHANNEL_QUICKSTART.md  EXTERNAL_CHANNEL_REPORT.md  EXTERNAL_CHANNEL_USAGE.md  EXTERNAL_COMMAND_SUMMARY.md  HARDCODED_PATHS_FIX_REPORT.md  HARDCODED_PATHS_REPORT.md  HELLO_REQUEST_SERVER_SIDE_ANALYSIS.md  LLM_FORWARD_TO_PEER_CHAT_MIGRATION_GUIDE.md  LLM_FORWARD_TO_PEER_CHAT_RENAME.md  NEMESISBOT_HOME_FIX_REPORT.md  NEMESISBOT_HOME_GUIDE.md  NEMESISBOT_HOME_IMPLEMENTATION_REPORT.md  NEW_LOGIC_ANALYSIS_REPORT.md  OUTBOUND_CHANNEL_RACE_FIX_2026-03-05.md  P0_DEADLOCK_FIX_COMPLETED.md  P0_DEADLOCK_SOLUTION.md  P1_FIXES_COMPLETED.md  P3_LOG_FORMAT_FIX_COMPLETED.md  PEER_CHAT_BLOCKING_INVESTIGATION.md  PEER_CHAT_COMPLETION_REPORT.md  PEER_CHAT_CORRELATION_ID_FIX.md  PEER_CHAT_DEBUG_GUIDE.md  PEER_CHAT_FINAL_VERIFICATION_REPORT.md  (+34 more)
test/WebSocketClient/: Cargo.toml
test/WebSocketClient/src/: client.rs
(+938 files in other folders)
